{
  "1804": {
    "version": "1804",
    "date": "23.04.2018",
    "changes": [
      "add more documentations",
      "update to grafana 5.0.4",
      "update icingaweb2",
      "set warning and critical values in some icinga2 checks",
      "bugfix for icinga2 memory check",
      "add max feeder elements for CAE Feeders",
      "add this web UI",
      "add Background Feeder graphs for Content Feeder",
      "remove 'used UAPI Cache' from Grafana Overview"
    ]
  },
  "1806": {
    "version": "1806",
    "date": "",
    "changes": []
  },
  "1808": {
    "version": "1808",
    "date": "",
    "changes": []
  }
}
