@@ -19,7 +19,7 @@ grafana_url_path      = ENV.fetch('GRAFANA_URL_PATH'       , '/grafana')
 grafana_api_user      = ENV.fetch('GRAFANA_API_USER'       , 'admin')
 grafana_api_password  = ENV.fetch('GRAFANA_API_PASSWORD'   , 'admin')
 grafana_template_path = ENV.fetch('GRAFANA_TEMPLATE_PATH'  , '/usr/local/templates')
-grafana_version       = ENV.fetch('GRAFANA_VERSION'        , 4)
+grafana_version       = ENV.fetch('GRAFANA_VERSION'        , 5)
 mq_host               = ENV.fetch('MQ_HOST'                , 'beanstalkd')
 mq_port               = ENV.fetch('MQ_PORT'                , 11300)
 mq_queue              = ENV.fetch('MQ_QUEUE'               , 'mq-grafana')
